...
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/headerPrimary"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/inputKeyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter event name, location, or description"
            android:background="@android:drawable/edit_text"
            android:padding="10dp"
            android:layout_marginBottom="24dp" />
...
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonApplyFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Apply"
                android:textAllCaps="false"
                android:background="@drawable/button_color"
                android:textColor="@color/button_text_color"/>
...
