...
            android:contentDescription="@string/scan_qr_code"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/guideButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:text="guide"
            android:background="@drawable/button_color"
            android:textColor="@color/button_text_color" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/filterButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/filter"
            android:background="@drawable/button_color"
            android:textColor="@color/button_text_color" />
...
