...
        android:textSize="14sp"
        android:textColor="@color/textPrimary"
        android:paddingTop="8dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginTop="32dp"
        android:visibility="gone"
        android:text="Log in"
...
